tests/ui/coherence/negative-coherence-check-placeholder-outlives.stderr
error[E0119]: conflicting implementations of trait `Bar` for type `Box<_>`
  --> $DIR/negative-coherence-check-placeholder-outlives.rs:11:1
   |
LL | impl<T> Bar for T where T: Foo {}
   | ------------------------------ first implementation here
LL | impl<T> Bar for Box<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Box<_>`
   |
   = note: downstream crates may implement trait `Foo` for type `std::boxed::Box<_>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
